<resources>
    <string name="app_name">AnimalCrossingHelper</string>

    <!-- Ключи для SharedPreferences -->
    <string name="is_remember_me_key">is_remember_me_key</string>
    <string name="is_logged_key">is_logged_key</string>
    <string name="id_key">id_key</string>
    <string name="login_key">login_key</string>
    <string name="logged_id_key">logged_id_key</string>

    <!-- Текстовки для снекбаров -->
    <string name="user_already_exists">Пользователь с таким логином уже существует</string>
    <string name="passwords_are_not_equal">Введённые пароли не совпадают</string>
    <string name="login_and_passwords_must_not_be_empty">Поля логина и паролей не должны быть пустыми</string>
    <string name="user_is_absent">Такого пользователя не существует</string>
    <string name="password_is_incorrect">Пароль введён неверно</string>
    <string name="field_is_not_changed">Логин и пароль не изменились</string>
    <string name="login_and_password_changed">Логин и пароль изменены</string>
    <string name="register_complete">Пользователь зарегистрирован</string>
    <string name="entry_deleted">Элемент больше не будет отображаться</string>

    <!-- Стартовый экран -->
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>

    <!-- Экран пользователя -->
    <string name="show_password">Показать пароль</string>
    <string name="logout">Выйти</string>
    <string name="save">Сохранить</string>

    <!-- Итем -->
    <string name="catched">Поймал</string>
    <string name="remind">Напомнить</string>

    <!-- Экран списка -->
    <string name="month">Месяц</string>
    <string name="location">Локация</string>
    <string name="price">Цена</string>
    <string name="show_catched">Все</string>

</resources>